2009-05-07  Marco Atzeri  <marco_atzeri@yahoo.it>

	* configure.in, Makeconf.in: (SHLPRE): Rename from SHLLIBPRE.

2009-05-05  Jaroslav Hajek  <highegg@gmail.com>

	* configure.in: Include the whole 3.x g++ series as problematic.
	* Makefile: Don't mention that g++-3.x might work.

2009-05-04  John W. Eaton  <jwe@octave.org>

	* configure.in: Put -lftgl ahead of $FT2_LIBS, and $FT2_LIBS ahead
	of $OPENGL_LIBS.

2009-05-04  Peter O'Gorman  <pogma@thewrittenword.com>

	* aclocal.m4 (OCTAVE_HAVE_C99_VSNPRINTF): New macro.
	* configure.in: Use it.

	* configure.in (rs6000-ibm-aix* | powerpc-ibm-aix*): Set
	library_path_var to LIBPATH.
	(hppa*-hp-hpux*): Set library_path_var to SHLIB_PATH.
	(ia64*-hp-hpux*): New case for shared library variables.

	* configure.in: Provide decls for exp2, round, and tgamma if they
	are missing.

2009-04-11  David Bateman  <dbateman@free.fr>

	* NEWS: Add new graphics functions.

2009-04-05  John W. Eaton  <jwe@octave.org>

	* configure.in: Use AC_USE_SYSTEM_EXTENSIONS instead of
	AC_GNU_SOURCE, AC_AIX, AC_MINIX, and AC_ISC_POSIX.
	Require Autoconf 2.60.

	* configure.in: Add -Wformat to extra warning flags.  Add
	-Wconversion to strict warning flags.

2009-04-02  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (do-script-install): Use $(INSTALL_DATA) instead of
	mv to install PKG_ADD file.

2009-04-02  Marco Atzeri  <marco_atzeri@yahoo.it>

	* Makeconf.in (do-subst-script-vals): Use SHLLIBPRE instead of
	LIBPRE for names for shared libraries.

2009-03-28  Marco Atzeri  <marco_atzeri@yahoo.it>

	* configure.in: For cygwin, set LIBPRE=lib and clear CPICFLAG,
	CXXPICFLAG, and FPICFLAG.

2009-03-27  Jaroslav Hajek <highegg@gmail.com>

	* aclocal.m4 (OCTAVE_CMATH_FUNC): Add missing AC_LANG_POP.
	* configure.in: Enclose string in quotes.

2009-03-23  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: More updates.

2009-03-20  Jaroslav Hajek  <highegg@gmail.com>

	* aclocal.m4 (OCTAVE_CMATH_FUNC): New macro.
	* configure.in: Use it.
