@@ -2058,11 +2058,6 @@ AH_BOTTOM([
 #define FCN_PTR_CAST(T, E) reinterpret_cast<T> (E)
 #endif
 
-#if defined(HAVE_F2C) && !defined(F77_FUNC)
-#  define F77_FUNC(x,X) x ## _
-#  define F77_FUNC_(x,X) x ## __
-#endif
-
 #if !defined(HAVE_DEV_T)
 typedef short dev_t;
 #endif
@@ -2175,12 +2170,6 @@ AC_OUTPUT
 
 ### Print a summary so that important information isn't missed.
 
-if test -z "$F77"; then
-  FORT="$F2C $F2CFLAGS"
-else
-  FORT="$F77 $FFLAGS"
-fi
-
 AC_MSG_NOTICE([
 
 Octave is now configured for $canonical_host_type
@@ -2189,7 +2178,7 @@ Octave is now configured for $canonical_host_type
   Installation prefix:  $prefix
   C compiler:           $CC $XTRA_CFLAGS $WARN_CFLAGS $CFLAGS
   C++ compiler:         $CXX $XTRA_CXXFLAGS $WARN_CXXFLAGS $CXXFLAGS
-  Fortran compiler:     $FORT
+  Fortran compiler:     $F77 $FFLAGS
   Fortran libraries:    $FLIBS
   BLAS libraries:       $BLAS_LIBS
   FFTW libraries:       $FFTW_LIBS
