@@ -35,8 +35,6 @@ F77=%OCTAVE_CONF_F77%
 FFLAGS=%OCTAVE_CONF_FFLAGS%
 FPICFLAG=%OCTAVE_CONF_FPICFLAG%
 FLIBS=%OCTAVE_CONF_FLIBS%
-F2C=%OCTAVE_CONF_F2C%
-F2CFLAGS=%OCTAVE_CONF_F2CFLAGS%
 CPPFLAGS=%OCTAVE_CONF_CPPFLAGS%
 INCFLAGS=%OCTAVE_CONF_INCFLAGS%
 CC=%OCTAVE_CONF_CC%
@@ -231,8 +229,6 @@ uname output:     $UN
 configure opts:   $config_opts
 Fortran compiler: $F77
 FFLAGS:           $FFLAGS
-F2C:              $F2C
-F2CFLAGS:         $F2CFLAGS
 FLIBS:            $FLIBS
 CPPFLAGS:         $CPPFLAGS
 INCFLAGS:         $INCFLAGS
